login completed,jwt token used for make user details secure

--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,5 @@
 PORT = 8000
 MONGODB_URI_LOCAL = mongodb://127.0.0.1:27017/E-commerce_app
 MONGODB_URI = 
+JWT_SECRET_KEY = "CGFSURWEOIMSCBSFVDQOEQPELDADSLMDADHDDUIHDVBSDFDHFQW"
+FRONTEND_URL = "http://localhost:5173"
