--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.3",
+    "otp-generator": "^4.0.1",
     "stripe": "^15.12.0"
   }
 }
