--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "server",
+  "name": "e-commerce-app",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "dev":"nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,8 +21,10 @@
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.14",
-    "nodemon": "^3.1.3",
     "otp-generator": "^4.0.1",
     "stripe": "^15.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
